# ErgoCare-AI

./: .gitignore  README.md
backend/: base_model.py  full_pipeline.py  ml_to_rag_bridge.py  pyproject.toml
backend/api/: server.py
backend/ml_pipeline/data/synthetic/: generate_synthetic.py
backend/ml_pipeline/features/: __init__.py  feature_builder.py  test_fts.py
backend/ml_pipeline/labels/: risk_labeler.py
backend/ml_pipeline/models/: inference.py  risk_interpreter.py  xgb_model.py  xgboost_risk_model.json
backend/ml_pipeline/pipeline/: ml_pipeline.py  run_pipeline.py
backend/ml_pipeline/preprocessing/: encoder.py  test_encoder.py
backend/ml_pipeline/schema/: form_schema.py
backend/rag_pipeline/chroma_db/2acb36b0-7ee9-4372-b3d8-5489bb37951c/: index_metadata.pickle
backend/rag_pipeline/chroma_db/d7132d72-6b6d-4b67-80b7-e69dd9d1c853/: index_metadata.pickle
backend/rag_pipeline/knowledge_base/policy/: citation.md  clinical_safety.md  data_privacy.md  feature_definition.md  llm_gen.md  recommendation.md  threshold.md
backend/rag_pipeline/rag/: ingest.py  ingest_md.py  rag_gen.py  rag_pipeline.py  test_retrieve.py
backend/rag_pipeline/rag/input/: user_data.json
backend/rag_pipeline/vectordb/chroma_ergo/: chroma.sqlite3
backend/vectordb/chroma_ergo/: chroma.sqlite3
frontend/: package-lock.json
frontend/src/: App.css  App.tsx
